# OpenGL_Learning

./: .gitignore  AnAsteroidField.cpp  Instancing.cpp  OpenGLStarting.cpp  Spotlight.cpp  Transformations.cpp  blending.cpp  camera.h  cameraImpl.cpp  cubeMaps.cpp  depth_testing.cpp  frameBuffer.cpp  geometry.cpp  going3D.cpp  lightingMain.cpp  modelExplodingVisNormals.cpp  model_loading.cpp  multipleLights.cpp  pointLightAtun.cpp  reflectiveRefractive.cpp  run.sh  stencilTeat.cpp  texture.cpp  triTexture.cpp
BreakoutGame/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Makefile.am  PostProcessor.cpp  PostProcessor.h  PowerUp.h  SpriteRenderer.h  configure.ac  particleGenerator.cpp  particleGenerator.h  program.cpp  run.sh
BreakoutGame/includes/Shaders/: PostProcessing.fs  PostProcessing.vs
BreakoutGame/includes/Utiliy/: Shader.h  SpriteRenderer.h  resource_manager.h
BreakoutGame/includes/glad/: glad.h
RubixCube/: a  cubeRenderer.cpp  glad.c  makefile
Shaders/: 1.1.depth_testing.fs  1.model_loading.fs  1.model_loading.vs  1.model_loadingDirLight.fs  Shader.cpp  Shader.h  Spotlight.fs  asteroid.fs  asteroid.vs  asteroidInstance.vs  blending.fs  cubeMaps.fs  cubeMaps.vs  explode.fs  explode.gs  explode.vs  fregShader330  geometry.fs  geometry.gs  geometry.vs  instancing.vs  lightShader.fs  lightShader.vs  lightingShader.fs  lightingShader.vs  mesh.h  model.h  multipleLights.fs  pointLightAtun.fs  quadShader.fs  quadShader.vs  reflectiveRefractive.vs  stencilTest.fs  verShader330  visNormals.vs
(+14 files in other folders)
